--- a/Introduction.tex
+++ b/Introduction.tex
@@ -1,7 +1,6 @@
 \section*{Introduction}
 
-% How DSBs get repaired
-% RecBCD biochemistry (incl. dissociation from DNA)
+% RecBCD biochemistry
 DNA double-strand breaks (DSBs) pose a serious threat to the integrity of bacterial cells: when left unrepaired, they can lead to cell death, genome rearrangements or mutagenesis. In \emph{E. coli}, DSBs are repaired through the RecBCD pathway. RecBCD is a heterotrimeric protein complex, which combines several enzymatic activities\cite{Dillingham2008}. Upon recognition of a DSB, RecBCD translocates along the DNA at a speed of $\sim$1.6 kb/s\cite{Wiktor2018}, and digests both DNA strands until it meets a specific 8-base pair sequence (5'-GCTGGTGG-3') called Chi-site. Upon recognition of the Chi-site, RecBCD stops degrading the 3' end, leading to a 3' DNA overhang. Of note, Chi recognition by RecBCD is not systematic, and was previously reported to occur with $\sim$40\% probability\cite{Taylor1992,Cockram2015}. As RecBCD creates the 3' overhang, the nuclease domain of its RecB subunit promotes loading of the RecA protein onto the single-stranded DNA (ssDNA)\cite{Churchill2000, Spies2006}. The resulting RecA-DNA nucleoprotein filament is used as a template to search for an intact homologous sequence and perform homologous recombination. It is still unclear at which point exactly RecBCD dissociates from the DNA and what specifically triggers the dissociation.
 
 % Endogenous DSBs
