--- a/Supplementary.tex
+++ b/Supplementary.tex
@@ -43,7 +43,7 @@ with $D_i$ the apparent diffusion coefficient, and $t$ the frame time. Our previ
         MEK716 & MG1655 \textit{recB1080::halotag} & this work \\ % = AL139_3
         MEK2324 & MG1655 \textit{recB1080::halotag HK022::psfiA-GFP} & \cite{Lepore2023} \\
         MEK65 & MG1655 \textit{recB::halotag} & \cite{Lepore2019a} \\
-        AL119 & MG1655 \textit{recB::halotag pBad::GamL} & this work \\ % = AL119, to be updated to MEK
+        MEK2629 & MG1655 \textit{recB::halotag pBad::GamL} & this work \\ % = AL119
         DL654 & MG1655 \textit{$\Delta$recA} & \cite{Wertman1986} \\
         \bottomrule
     \end{tabular}
