Added intro refs

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -926,3 +926,53 @@ The authors have declared no competing interest.},
    url = {https://www.nature.com/articles/s42003-019-0655-4},
    year = {2019},
 }
+@article{Wyman2006,
+   abstract = {Breaks in both DNA strands are a particularly dangerous threat to genome stability. At a DNA double-strand break (DSB), potentially lost sequence information cannot be recovered from the same DNA molecule. However, simple repair by joining two broken ends, though inherently error prone, is preferable to leaving ends broken and capable of causing genome rearrangements. To avoid DSB-induced genetic disinformation and disruption of vital processes, such as replication and transcription, cells possess robust mechanisms to repair DSBs. Because all breaks are not created equal, the particular repair mechanism used depends largely on what is possible and needed based on the structure of the broken DNA. We argue that although categorizing different DSB repair mechanisms along pathways and subpathways can be conceptually useful, in cells flexible and reversible interactions among DSB repair factors form a web from which a nonpredetermined path to repair for any number of different DNA breaks will emerge. Copyright © 2006 by Annual Reviews. All rights reserved.},
+   author = {Claire Wyman and Roland Kanaar},
+   doi = {10.1146/annurev.genet.40.110405.090451},
+   isbn = {0824312406},
+   issn = {00664197},
+   issue = {Volume 40, 2006},
+   journal = {Annual Review of Genetics},
+   keywords = {DNA damage,Genome (in)stability,Homologous recombination,Nonhomologous DNA end-joining,Stalled DNA replication},
+   month = {12},
+   pages = {363-383},
+   pmid = {16895466},
+   publisher = {Annual Reviews},
+   title = {DNA double-strand break repair: All's well that ends well},
+   volume = {40},
+   url = {https://www.annualreviews.org/content/journals/10.1146/annurev.genet.40.110405.090451},
+   year = {2006},
+}
+@article{Wyman2004,
+   abstract = {Exchange of strands between homologous DNA molecules is catalyzed by evolutionarily conserved recombinases. These proteins can occur in different quaternary arrangements: rings or helical filaments. Recent results reveal that recombinase function follows from the filamentous form.},
+   author = {Claire Wyman and Roland Kanaar},
+   doi = {10.1016/j.cub.2004.07.049},
+   issn = {09609822},
+   issue = {15},
+   journal = {Current Biology},
+   month = {8},
+   pages = {R629-R631},
+   pmid = {15296782},
+   publisher = {Cell Press},
+   title = {Homologous recombination: Down to the wire},
+   volume = {14},
+   url = {http://www.cell.com/article/S0960982204005536/fulltext http://www.cell.com/article/S0960982204005536/abstract https://www.cell.com/current-biology/abstract/S0960-9822(04)00553-6},
+   year = {2004},
+}
+@article{Ojkic2020,
+   abstract = {Fluoroquinolones, antibiotics that cause DNA damage by inhibiting DNA topoisomerases, are clinically important, but their mechanism of action is not yet fully understood. In particular, the dynamical response of bacterial cells to fluoroquinolone exposure has hardly been investigated, although the SOS response, triggered by DNA damage, is often thought to play a key role. Here, we investigated the growth inhibition of the bacterium Escherichia coli by the fluoroquinolone ciprofloxacin at low concentrations. We measured the long-term and short-term dynamical response of the growth rate and DNA production rate to ciprofloxacin at both the population and single-cell levels. We show that, despite the molecular complexity of DNA metabolism, a simple roadblock-and-kill model focusing on replication fork blockage and DNA damage by ciprofloxacin-poisoned DNA topoisomerase II (gyrase) quantitatively reproduces long-term growth rates in the presence of ciprofloxacin. The model also predicts dynamical changes in the DNA production rate in wild-type E. coli and in a recombination-deficient mutant following a step-up of ciprofloxacin. Our work highlights that bacterial cells show a delayed growth rate response following fluoroquinolone exposure. Most importantly, our model explains why the response is delayed: it takes many doubling times to fragment the DNA sufficiently to inhibit gene expression. We also show that the dynamical response is controlled by the timescale of DNA replication and gyrase binding/unbinding to the DNA rather than by the SOS response, challenging the accepted view. Our work highlights the importance of including detailed biophysical processes in biochemicalsystems models to quantitatively predict the bacterial response to antibiotics.},
+   author = {Nikola Ojkic and Elin Lilja and Susana Direito and Angela Dawson and Rosalind J. Allen and Bartlomiej Waclaw},
+   doi = {10.1128/AAC.02487-19/SUPPL_FILE/AAC.02487-19-S0001.PDF},
+   issn = {10986596},
+   issue = {9},
+   journal = {Antimicrobial Agents and Chemotherapy},
+   keywords = {Antibiotics,Computer modeling,Fluoroquinolones,Mechanisms of action},
+   month = {9},
+   pmid = {32601161},
+   publisher = {American Society for Microbiology},
+   title = {A roadblock-and-kill mechanism of action model for the DNA-targeting antibiotic ciprofloxacin},
+   volume = {64},
+   url = {https://journals.asm.org/doi/10.1128/aac.02487-19},
+   year = {2020},
+}
